Show active timer controls, fit timer size to window, some improvements

--- a/common.css
+++ b/common.css
@@ -24,7 +24,7 @@ div#frickeltimer {
 	width: 3em;
 	border: #aaa 2px solid;
 	float: left;
-	margin: 10px 50px 10px 10px;
+	margin: 10px;
 }
 
 div.controls {
